kubernetes/helmProject/helm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: webapp-ingress
spec:
  rules:
  - host: 172-232-84-154.ip.linodeusercontent.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: webapp-service
              port:
                number: 3000
